[gd_scene load_steps=8 format=3 uid="uid://5n0x0e5lv51x"]

[ext_resource type="Script" uid="uid://c5fqudufikyhy" path="res://models/ramp/ramp.gd" id="1_y1fhy"]
[ext_resource type="PackedScene" uid="uid://ptsn64jjttgy" path="res://models/ramp/ramp_plate.tscn" id="2_8ydw7"]
[ext_resource type="PackedScene" uid="uid://e578n3nensd8" path="res://models/ramp/ramp_base.tscn" id="2_isxxn"]
[ext_resource type="PackedScene" uid="uid://bgtwgucj06nfu" path="res://models/ramp/ramp_gate.tscn" id="4_mcbyp"]
[ext_resource type="PackedScene" uid="uid://ctg2r4pidcbm" path="res://models/ramp/ramp_light.tscn" id="5_qbq50"]
[ext_resource type="PackedScene" uid="uid://b61iabpqt7mow" path="res://models/ramp/gate_buttons.tscn" id="6_aaggw"]

[sub_resource type="BoxShape3D" id="BoxShape3D_tekk8"]
size = Vector3(3.08209, 0.163208, 0.191528)

[node name="Ramp" type="Node3D"]
script = ExtResource("1_y1fhy")

[node name="ramp_base" parent="." instance=ExtResource("2_isxxn")]
sync_to_physics = false

[node name="CollisionShape3D2" type="CollisionShape3D" parent="ramp_base"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00576782, 0.266052, -1.54048)
shape = SubResource("BoxShape3D_tekk8")

[node name="CollisionShape3D3" type="CollisionShape3D" parent="ramp_base"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00576782, 0.266052, 1.56249)
shape = SubResource("BoxShape3D_tekk8")

[node name="Plate" parent="." instance=ExtResource("2_8ydw7")]

[node name="RampBody" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.000168324)

[node name="SlideJoint" type="JoltGeneric6DOFJoint3D" parent="."]
linear_motor_z/max_force = 10000.0
node_a = NodePath("../Plate")
node_b = NodePath("../RampBody")
enabled = false

[node name="LeftHingeJoint" type="JoltHingeJoint3D" parent="."]
motor_max_torque = 1000.0
enabled = false
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0.176, -1.63)

[node name="RightHingeJoint" type="JoltHingeJoint3D" parent="."]
motor_max_torque = 1000.0
enabled = false
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0.176, 1.63)

[node name="GateRight" parent="." instance=ExtResource("4_mcbyp")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1.37632)

[node name="GateLeft" parent="." instance=ExtResource("4_mcbyp")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, -1.376)

[node name="RightWarnLight" parent="." instance=ExtResource("5_qbq50")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.59353, 1.55843, 1.53424)
off_color = Color(0.192157, 0, 0, 1)
on_color = Color(0.983846, 0.0600611, 5.77569e-07, 1)
is_on = true

[node name="RightSafeLight" parent="." instance=ExtResource("5_qbq50")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.81981, 1.55843, 1.53424)
off_color = Color(0, 0.2, 0, 1)
on_color = Color(0.266667, 1, 0, 1)
is_on = true

[node name="LeftWarnLight" parent="." instance=ExtResource("5_qbq50")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.59272, 1.55843, -1.53537)
off_color = Color(0.192157, 0, 0, 1)
on_color = Color(0.983846, 0.0600611, 5.77569e-07, 1)

[node name="LeftSafeLight" parent="." instance=ExtResource("5_qbq50")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.81899, 1.55843, -1.53537)
off_color = Color(0, 0.2, 0, 1)
on_color = Color(0.266667, 1, 0, 1)

[node name="LeftGateButtons" parent="." instance=ExtResource("6_aaggw")]
transform = Transform3D(1, 0, 0, 0, 0.675333, -0.737513, 0, 0.737513, 0.675333, 1.70416, 1.2516, -1.3341)

[node name="RightGateButtons" parent="." instance=ExtResource("6_aaggw")]
transform = Transform3D(-1, 6.44754e-08, 5.90395e-08, 0, 0.675333, -0.737513, -8.74228e-08, -0.737513, -0.675333, -1.70403, 1.2516, 1.3296)

[connection signal="pressed" from="LeftGateButtons" to="." method="_on_left_gate_buttons_pressed"]
[connection signal="pressed" from="RightGateButtons" to="." method="_on_right_gate_buttons_pressed"]
